force-app/main/default/objects/PSQ__c/PSQ__c.object-meta.xml
<CustomObject>
    <label>Procedimento do Sistema de Qualidade</label>
    <nameField>
        <label>Título do Documento</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Procedimentos do Sistema de Qualidade</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>