force-app/main/default/objects/PSQ__c/fields/Aplicao__c.field-meta.xml
<CustomField>
    <fullName>Aplicao__c</fullName>
    <label>Aplicação</label>
    <length>97306</length>
    <type>LongTextArea</type>
</CustomField>