force-app/main/default/objects/PSQ__c/fields/Aprovado_por__c.field-meta.xml
<CustomField>
    <fullName>Aprovado_por__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Aprovado por</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Procedimentos do Sistema de Qualidade</relationshipLabel>
    <relationshipName>Documentos_da_LMD</relationshipName>
    <type>Lookup</type>
</CustomField>