force-app/main/default/objects/PSQ__c/fields/Aprovador__c.field-meta.xml
<CustomField>
    <fullName>Aprovador__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Aprovador</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Procedimentos do Sistema de Qualidade (Aprovador)</relationshipLabel>
    <relationshipName>Procedimentos_do_Sistema_de_Qualidade2</relationshipName>
    <type>Lookup</type>
</CustomField>