force-app/main/default/objects/PSQ__c/fields/Condi_es_especificas__c.field-meta.xml
<CustomField>
    <fullName>Condi_es_especificas__c</fullName>
    <label>Condições Específicas</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>