force-app/main/default/objects/PSQ__c/fields/Condi_es_Gerais__c.field-meta.xml
<CustomField>
    <fullName>Condi_es_Gerais__c</fullName>
    <label>Condições Gerais</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>