force-app/main/default/objects/PSQ__c/fields/Data_Aprovador__c.field-meta.xml
<CustomField>
    <fullName>Data_Aprovador__c</fullName>
    <label>Data Aprovador</label>
    <type>DateTime</type>
</CustomField>