force-app/main/default/objects/PSQ__c/fields/Data_Elaborador__c.field-meta.xml
<CustomField>
    <fullName>Data_Elaborador__c</fullName>
    <label>Data Elaborador</label>
    <type>DateTime</type>
</CustomField>