force-app/main/default/objects/PSQ__c/fields/Defini_es__c.field-meta.xml
<CustomField>
    <fullName>Defini_es__c</fullName>
    <label>Definições</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>