force-app/main/default/objects/PSQ__c/fields/Departamentos__c.field-meta.xml
<CustomField>
    <fullName>Departamentos__c</fullName>
    <inlineHelpText>Selecione os departamentos que terão a ce</inlineHelpText>
    <label>Departamentos</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Departamentos</valueSetName>
    </valueSet>
</CustomField>