force-app/main/default/objects/PSQ__c/fields/Equipamentos_e_Softwares__c.field-meta.xml
<CustomField>
    <fullName>Equipamentos_e_Softwares__c</fullName>
    <label>Equipamentos e Softwares</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>