force-app/main/default/objects/PSQ__c/fields/Formul_rios_Anexos_e_Documentos__c.field-meta.xml
<CustomField>
    <fullName>Formul_rios_Anexos_e_Documentos__c</fullName>
    <label>Formulários, Anexos e Documentos</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>