force-app/main/default/objects/PSQ__c/fields/Ger_ncia_Administrativa__c.field-meta.xml
<CustomField>
    <fullName>Ger_ncia_Administrativa__c</fullName>
    <label>Gerência Administrativa</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>