force-app/main/default/objects/PSQ__c/fields/Governo__c.field-meta.xml
<CustomField>
    <fullName>Governo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Governo</label>
    <type>Checkbox</type>
</CustomField>