force-app/main/default/objects/PSQ__c/fields/Instru_o_de_Servi_o__c.field-meta.xml
<CustomField>
    <fullName>Instru_o_de_Servi_o__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Instrução de Serviço</label>
    <referenceTo>Instrucao_de_Servico__c</referenceTo>
    <relationshipLabel>Procedimentos do Sistema de Qualidade</relationshipLabel>
    <relationshipName>Procedimentos_do_Sistema_de_Qualidade</relationshipName>
    <type>Lookup</type>
</CustomField>