force-app/main/default/objects/PSQ__c/fields/L_M_D__c.field-meta.xml
<CustomField>
    <fullName>L_M_D__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>L.M.D</label>
    <referenceTo>L_M_D__c</referenceTo>
    <relationshipLabel>Procedimentos do Sistema de Qualidade (L.M.D)</relationshipLabel>
    <relationshipName>Procedimentos_do_Sistema_de_Qualidade</relationshipName>
    <type>Lookup</type>
</CustomField>