force-app/main/default/objects/PSQ__c/fields/Loca_o__c.field-meta.xml
<CustomField>
    <fullName>Loca_o__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Locação</label>
    <type>Checkbox</type>
</CustomField>