force-app/main/default/objects/PSQ__c/fields/Log_stica__c.field-meta.xml
<CustomField>
    <fullName>Log_stica__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Logística</label>
    <type>Checkbox</type>
</CustomField>