force-app/main/default/objects/PSQ__c/fields/N_o_aplic_vel__c.field-meta.xml
<CustomField>
    <fullName>N_o_aplic_vel__c</fullName>
    <label>Não Aplicável</label>
    <length>65534</length>
    <type>LongTextArea</type>
</CustomField>