force-app/main/default/objects/PSQ__c/fields/Nome_do_Procedimento__c.field-meta.xml
<CustomField>
    <fullName>Nome_do_Procedimento__c</fullName>
    <label>Nome do Procedimento</label>
    <length>20</length>
    <type>Text</type>
</CustomField>