force-app/main/default/objects/PSQ__c/fields/Objetivo__c.field-meta.xml
<CustomField>
    <fullName>Objetivo__c</fullName>
    <label>Objetivo</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>