force-app/main/default/objects/PSQ__c/fields/Observa_o_Revis_o__c.field-meta.xml
<CustomField>
    <fullName>Observa_o_Revis_o__c</fullName>
    <label>Observação (Revisão)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>