force-app/main/default/objects/PSQ__c/fields/POP__c.field-meta.xml
<CustomField>
    <fullName>POP__c</fullName>
    <displayFormat>POP - {0000}</displayFormat>
    <label>POP</label>
    <type>AutoNumber</type>
</CustomField>