force-app/main/default/objects/PSQ__c/fields/Procedimento_do_Sistema_de_Qualidade__c.field-meta.xml
<CustomField>
    <fullName>Procedimento_do_Sistema_de_Qualidade__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Procedimento em vigência</label>
    <referenceTo>PSQ__c</referenceTo>
    <relationshipLabel>Procedimentos do Sistema de Qualidade</relationshipLabel>
    <relationshipName>Procedimentos_do_Sistema_de_Qualidade</relationshipName>
    <type>Lookup</type>
</CustomField>