force-app/main/default/objects/PSQ__c/fields/PSQ__c.field-meta.xml
<CustomField>
    <fullName>PSQ__c</fullName>
    <displayFormat>PSQ - {0000}</displayFormat>
    <label>PSQ</label>
    <type>AutoNumber</type>
</CustomField>