force-app/main/default/objects/PSQ__c/fields/rea_do_Procedimento__c.field-meta.xml
<CustomField>
    <fullName>rea_do_Procedimento__c</fullName>
    <label>Área do Procedimento</label>
    <type>TextArea</type>
</CustomField>