force-app/main/default/objects/PSQ__c/fields/Recursos_Humanos__c.field-meta.xml
<CustomField>
    <fullName>Recursos_Humanos__c</fullName>
    <label>Recursos Humanos</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>