force-app/main/default/objects/PSQ__c/fields/Refer_ncia__c.field-meta.xml
<CustomField>
    <fullName>Refer_ncia__c</fullName>
    <label>Referência</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>