force-app/main/default/objects/PSQ__c/fields/Registros__c.field-meta.xml
<CustomField>
    <fullName>Registros__c</fullName>
    <label>Registros</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>