force-app/main/default/objects/PSQ__c/fields/Responsabilidade_e_Autoridade__c.field-meta.xml
<CustomField>
    <fullName>Responsabilidade_e_Autoridade__c</fullName>
    <label>Responsabilidade e Autoridade</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>