force-app/main/default/objects/PSQ__c/fields/Revisor__c.field-meta.xml
<CustomField>
    <fullName>Revisor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Revisor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Procedimentos_do_Sistema_de_Qualidade2</relationshipName>
    <type>Lookup</type>
</CustomField>