force-app/main/default/objects/PSQ__c/fields/Servi_o__c.field-meta.xml
<CustomField>
    <fullName>Servi_o__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Serviço</label>
    <type>Checkbox</type>
</CustomField>