force-app/main/default/objects/PSQ__c/fields/Setor_do_Procedimento__c.field-meta.xml
<CustomField>
    <fullName>Setor_do_Procedimento__c</fullName>
    <label>Setor do Procedimento</label>
    <type>TextArea</type>
</CustomField>