force-app/main/default/objects/PSQ__c/fields/Solicita_o_reprovada__c.field-meta.xml
<CustomField>
    <fullName>Solicita_o_reprovada__c</fullName>
    <label>Solicitação reprovada?</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>