force-app/main/default/objects/PSQ__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Elaboração</fullName>
                <default>true</default>
                <label>Elaboração</label>
            </value>
            <value>
                <fullName>Revisão</fullName>
            </value>
            <value>
                <fullName>Aprovação</fullName>
            </value>
            <value>
                <fullName>Aprovado</fullName>
            </value>
            <value>
                <fullName>Em vigência</fullName>
            </value>
            <value>
                <fullName>Obsoleto</fullName>
            </value>
            <value>
                <fullName>Em aprovação</fullName>
                <isActive>false</isActive>
                <label>Em aprovação</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>