force-app/main/default/objects/PSQ__c/fields/Vigencia__c.field-meta.xml
<CustomField>
    <fullName>Vigencia__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vigencia</label>
    <type>Checkbox</type>
</CustomField>