force-app/main/default/objects/PSQ__c/recordTypes/PSQ.recordType-meta.xml
<RecordType>
    <fullName>PSQ</fullName>
    <active>true</active>
    <description>Procedimento do Sistema de Qualidade</description>
    <label>PSQ</label>
</RecordType>