force-app/main/default/objects/PSQ__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>PSQ__c</columns>
    <columns>NAME</columns>
    <columns>Empresas__c</columns>
    <columns>Data_da_Ultima_Revis_o__c</columns>
    <columns>Elaborador__c</columns>
    <columns>Revisor__c</columns>
    <columns>Aprovador__c</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <columns>CREATED_DATE</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Elaboração,Revisão,Aprovado,Em vigência</value>
    </filters>
    <label>Procedimento do Sistema de Qualidade</label>
</ListView>