force-app/main/default/objects/PSQ__c/listViews/ANTIGOS.listView-meta.xml
<ListView>
    <fullName>ANTIGOS</fullName>
    <columns>NAME</columns>
    <columns>Aplicao__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Data_de_Cria_o__c</field>
        <operation>lessThan</operation>
        <value>3/22/2023</value>
    </filters>
    <label>ANTIGOS</label>
</ListView>