force-app/main/default/objects/PSQ__c/listViews/PSQs_Obsoletos.listView-meta.xml
<ListView>
    <fullName>PSQs_Obsoletos</fullName>
    <columns>NAME</columns>
    <columns>Empresas__c</columns>
    <columns>Data_da_Ultima_Revis_o__c</columns>
    <columns>Elaborador__c</columns>
    <columns>Revisor__c</columns>
    <columns>Aprovador__c</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <columns>CREATED_DATE</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Obsoleto</value>
    </filters>
    <label>PSQs Obsoletos</label>
</ListView>