force-app/main/default/objects/PSQ__c/listViews/Todos.listView-meta.xml
<ListView>
    <fullName>Todos</fullName>
    <columns>NAME</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Status__c</columns>
    <columns>Vigencia__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>